--- a/config.yml
+++ b/config.yml
@@ -272,6 +272,9 @@ bookmark:
   - name: Amazon
     url: https://www.amazon.co.jp
     favicon: amazon.png
+  - name: 什么值得买
+    url: https://www.smzdm.com
+    favicon: smzdm.png
 
   - category: Image
   - name: PixFix
