--- a/config.yml
+++ b/config.yml
@@ -66,7 +66,8 @@ bookmark:
     url: https://szfilehelper.weixin.qq.com
     favicon: wechat.png
   - name: Snapdrop
-    url: https://snapdrop.net
+    url: https://drop.ioiox.com
+    # url: https://snapdrop.net
   - name: Rentry.co
     url: https://rentry.co
     favicon: rentryco.png
