--- a/config.yml
+++ b/config.yml
@@ -58,7 +58,7 @@ bookmark:
     url: https://szfilehelper.weixin.qq.com
     favicon: wechat.png
   - name: Rentry.co
-    url: https://rentry.co
+    url: https://rentry.co/ibm5100
     favicon: rentryco.png
   - name: Telegraph
     url: https://telegra.ph
